--- a/app.css
+++ b/app.css
@@ -236,20 +236,20 @@ a { text-decoration: none;}
 .cash-flow-calc {
     border: 1px solid #4a1919;
     text-align: center;
-    margin: 2rem auto;
-    width: 90%;
+    width: 100%;
+    margin: 0.5rem auto;
     font-weight: 400;
     font-size: 1.5rem;
-    padding: 1rem;
+    padding: 0.41rem;
     border-radius: 12px;
     box-shadow: 1px 4px 15px #4a1919;
 }
 
-.cash-flow-calc p {
+/* .cash-flow-calc p {
     font-size: 1rem;
     color: #605e5e;
     padding-bottom: 1rem;
-}
+} */
 
 
 @media  screen  and (min-width: 750px){
